--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -1123,11 +1123,9 @@ input:hover {
 
 }
 
-.modal-dialog,
-.modal-content {
-  background: rgba(255, 255, 255, 0.18) !important;
-  backdrop-filter: blur(50px) !important;
-  -webkit-backdrop-filter: blur(50px) !important;
+
+.modal-dialog {
+  background: rgb(234, 234, 234) !important;
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border: solid !important;
@@ -1136,17 +1134,25 @@ input:hover {
   animation: zoomIn 0.3s ease-out !important;
 }
 
-.modal-dialog {
-  position: relative;
-  border-radius: 12px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-  max-width: 800px !important;
-  width: 90%;
-  box-sizing: border-box;
-  margin-top: 130px !important;
-  background: rgba(255, 255, 255, 0.18) !important;
-  backdrop-filter: blur(50px) !important;
-  -webkit-backdrop-filter: blur(50px) !important;
+.modal-content {
+  background: rgba(255, 255, 255, 0.195) !important;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
+
+.modal-backdrop-blur {
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  backdrop-filter: blur(5px);
+}
+
+.modal-backdrop-blur {
+  transition: all 0.3s ease;
+  opacity: 1;
+}
+.modal.closing .modal-backdrop-blur {
+  opacity: 0;
 }
 
 @media (max-width: 768px) {
