--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -1108,17 +1108,18 @@ input:hover {
 
 /* ========== ESTILO DE LAS VENTANAS MODALES ========== */
 
+.modal {
+  height: unset !important;
+}
+
 .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 1040; 
 }
 
 
@@ -1152,14 +1153,6 @@ input:hover {
   backdrop-filter: blur(5px);
 }
 
-.modal-backdrop-blur {
-  transition: all 0.3s ease;
-  opacity: 1;
-}
-.modal.closing .modal-backdrop-blur {
-  opacity: 0;
-}
-
 @media (max-width: 768px) {
   .modal-dialog {
     width: 90%;
@@ -1171,7 +1164,6 @@ input:hover {
   border: none !important;
 
 }
-
 
 .modal-header,
 .modal-footer {
